--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 /* link the web font used for the level 1 heading here */
 
 /*////////// Global Styles //////////*/
-
+/* comment */
 body {
 	background: #F3EBE9;
 	font-size: 100%;
