--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,29 @@ body {
 }
 
 /* Write all remaining styles here */
+h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { 
+	color: #98ada6;
+	text-decoration:none;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+
+}
+
+h1 {
+	padding-bottom:10px;
+	margin: 0 0 5px;
+	font-size: 5em;
+	border-bottom: 1px solid #ccc;
+}
+
+#header-img {
+	border: 5px solid #98ada6;
+}
+
+.press-img {
+	border: 5px solid #cccccc;
+}
+
+footer {
+	text-align: right;
+}
