--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,47 @@
 /*////////////// Fonts //////////////*/
 
-/* link the web font used for the level 1 heading here */
+@font-face {
+	font-family: "Baskerville";
+	src: url(../fonts/Baskerville.ttc);
 
-/*////////// Global Styles //////////*/
+	}
+
+/*/ ///////// Global Styles //////////*/
 
 body {
-	background: #F3EBE9;
-	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+  background: #f3ebe9;
+  font-size: 100%;
+  font-family: "Times New Roman", serif;
 }
 
 .wrapper {
-	width: 960px;
-	margin: 0 auto;
-	background: #fff;
-	padding: 0 45px 20px;
+  width: 960px;
+  margin: 0 auto;
+  background: #fff;
+  padding: 0 45px 20px;
 }
 
 /* Write all remaining styles here */
+
+h1 {
+  color: #98ada6;
+  font-family: "Baskerville", serif;
+  font-size: 5em;
+  font-weight: normal;
+  padding-bottom: 10px;
+  margin: 0 0 5px;
+  border-bottom: 1px solid #ccc;
+}
+
+h2 {
+  color: #98ada6;
+  font-size: 2em;
+}
+
+#header-img {
+  border: 5px solid #98ada6;
+}
+
+.press-image {
+  border: 4px solid lightgrey;
+}
